--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarCollapse">
 				<div class="navbar-nav">
-					<a href="#" class="nav-item nav-link active">Fictional Character</a>
+					<a href="character/index.html" class="nav-item nav-link active">Fictional Character</a>
 					<a href="#" class="nav-item nav-link">Hometown</a>
 					<a href="#" class="nav-item nav-link">MadLibs</a>
 				</div>
