--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<div class="collapse navbar-collapse" id="navbarCollapse">
 				<div class="navbar-nav">
 					<a href="character/index.html" class="nav-item nav-link active">Fictional Character</a>
-					<a href="#" class="nav-item nav-link">Hometown</a>
+					<a href="izmir/index.html" class="nav-item nav-link">Izmir Hometown</a>
 					<a href="#" class="nav-item nav-link">MadLibs</a>
 				</div>
 			</div>
